rework event entity

--- a/custom_components/monzo/translations/en.json
+++ b/custom_components/monzo/translations/en.json
@@ -48,6 +48,11 @@
     }
   },
   "entity": {
+    "event": {
+      "last_transaction": {
+        "name": "Last Transaction"
+      }
+    },
     "sensor": {
       "balance": {
         "name": "Balance"
