feat: add category spend sensors

--- a/custom_components/monzo/translations/en.json
+++ b/custom_components/monzo/translations/en.json
@@ -49,6 +49,10 @@
     "update": {
       "name": "Update entities",
       "description": "Updates all entities"
+    },
+    "category_update": {
+      "name": "Update categories",
+      "description": "Updates all categories"
     }
   },
   "entity": {
