--- a/custom_components/monzo/translations/en.json
+++ b/custom_components/monzo/translations/en.json
@@ -73,6 +73,9 @@
       },
       "spend_today": {
         "name": "Spend Today"
+      },
+      "category_spend": {
+        "name": "Category Spend"
       }
     }
   }
